--- a/style.css
+++ b/style.css
@@ -124,42 +124,61 @@ section{
     margin-top: 4vh;
 }
 #user_name{
-    border: none;
-    background: none;
     border-bottom: 2px solid;
     width: 250px;
-    margin-top: 40px;
+    height: 40px;
+    margin: auto;
+    margin-top: 30px;
     margin-bottom: 5px;
     text-align: center;
     text-transform: uppercase;
     font-size: 20px;
     font-weight: bolder;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    font-family: sans-serif;
     /* border: 1px solid; */
 }
 #user_id,#user_signature{
-    border: none;
-    background: none;
     border-bottom: 2px solid;
     width: 250px;
+    height: 40px;
+    margin:auto;
     margin-bottom: 5px;
+    margin-top: 10px;
     text-align: center;
-    font-size: 17px;
     font-weight: bolder;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    /* border: 1px solid red; */
+}
+.label_id{
+    font-family: sans-serif;
+    font-style: italic;
+}
+#user_id{
+    font-family: sans-serif;
+    font-size: 23px;
 }
 #user_signature{
     font-family: 'WindSong', cursive;
     font-size: 30px;
     text-transform: capitalize;
+    margin-top: 10px;
 }
 .user_bs{
     background-color: #077ead;
     padding: 5px 10px;
     border-radius: 5px;
+    font-family: sans-serif;
+    font-weight: bold;
+    color: rgb(223, 223, 223);
 }
 #user_bs{
     text-transform: uppercase;
     font-family: sans-serif;
-
 }
 /* ===========================id back */
 .id_wrapper_back{
@@ -213,7 +232,8 @@ section{
     margin: auto;
 }
 .emergency_contact_wrapper p:nth-child(4){
-    font-size: 27px;
+    /* font-size: 27px; */
+    font-size: clamp(20px,5vw,25px);
     font-weight: bolder;
     text-transform: uppercase;
     font-family: sans-serif;
@@ -306,35 +326,20 @@ section{
         height: 150px;
         width: 150px;
         margin: auto;
-        margin-top: 4vh;
+        margin-top: 20px;
     }
     #user_name{
         border: none;
         background: none;
         border-bottom: 2px solid;
         width: 250px;
-        margin-top: 40px;
+        margin-top: 20px;
         margin-bottom: 5px;
         text-align: center;
         text-transform: uppercase;
         font-size: 20px;
         font-weight: bolder;
         /* border: 1px solid; */
-    }
-    #user_id,#user_signature{
-        border: none;
-        background: none;
-        border-bottom: 2px solid;
-        width: 250px;
-        margin-bottom: 5px;
-        text-align: center;
-        font-size: 17px;
-        font-weight: bolder;
-    }
-    #user_signature{
-        font-family: 'WindSong', cursive;
-        font-size: 30px;
-        text-transform: capitalize;
     }
     .user_bs{
         background-color: #077ead;
@@ -411,10 +416,11 @@ section{
         margin: auto;
     }
     .emergency_contact_wrapper p:nth-child(4){
-        font-size: 24px;
+        /* font-size: 24px; */
         font-weight: bolder;
         text-transform: uppercase;
         font-family: sans-serif;
+        /* color: red; */
     }
     .emergency_contact_wrapper p:nth-child(6){
         font-style: italic;
