--- a/style.css
+++ b/style.css
@@ -40,13 +40,33 @@ section{
     /* background-color: red; */
 }
 /* ==================================bg_video */
+.bg_video_wrapper{
+    background: rgb(168, 221, 235);
+    position: absolute;
+    z-index: -5;
+    width: 100%;
+    height: 100%;
+    filter: opacity(0.6);
+    overflow: hidden;
+    position: fixed;
+}
+.bg_video_wrapper video{
+    width: 100%;
+    height: auto;
+    /* width: auto;
+    height: 100%; */
+}
+
 /* =================================user input */
 .user_container_info{
-    border: 1px solid;
+    /* border: 1px solid; */
     padding: 20px;
     width: 350px;
     font-family: courier;
     margin: auto;
+    background-color: #7ddaff;
+    border-radius: 10px;
+    box-shadow: 3px 3px 10px;
 }
 .user_container_info input{
     float: right;
@@ -266,7 +286,12 @@ section{
 
 
 
-
+@media (max-width:1600px){
+    .bg_video_wrapper video{
+        width: auto;
+        height: 100%;
+    }
+}
 
 
 @media (max-width: 1200px){
@@ -282,6 +307,10 @@ section{
     .id_wrapper_back{
         margin-top: 5vh;
         margin-bottom: 100px;
+    }
+    .bg_video_wrapper video{
+        width: auto;
+        height: 100%;
     }
 }
 
