--- a/style.css
+++ b/style.css
@@ -41,17 +41,25 @@ section{
 }
 /* ==================================bg_video */
 .bg_video_wrapper{
-    background: rgb(168, 221, 235);
+    /* background: rgb(168, 221, 235); */
     position: absolute;
     z-index: -5;
     width: 100%;
     height: 100%;
+    margin-top: 70px;
     filter: opacity(0.6);
     overflow: hidden;
     position: fixed;
 }
 .bg_video_wrapper video{
-    width: 100vw;
+    /* display: none; */
+    margin-top: 10px;
+    position: absolute;
+    object-fit:fill;
+    height: 100%;
+    width: 100%;
+    /* background-color: red; */
+    /* width: 1000px; */
     /* height: 100vh; */
     /* width: auto;
     height: 100%; */
